--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ jobs:
     steps:
       - checkout
       - run: release.sh
+      - run: release.sh -g 1.13.3 -w 0
 workflows:
   version: 2
   docs:
